# multitenant

./: .dockerignore  .env.example  .env.production.example  .env.test  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.yml
docs/: api.md  deployment.md
migrations/: 20250117000001_create_users.sql  20250117000002_create_sessions.sql  20250117000003_create_jwt_tokens.sql  20250117000004_add_profile_columns.sql
resources/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
resources/css/: app.css
resources/js/: app.tsx  bootstrap.ts
resources/js/components/forms/: ErrorMessage.tsx  FormField.tsx  PasswordStrength.tsx
resources/js/components/layout/: FlashMessages.tsx
resources/js/hooks/: useForm.ts
resources/js/layouts/: AppLayout.tsx  AuthLayout.tsx
resources/js/lib/: validation.ts
resources/js/pages/Auth/: Login.tsx  Register.tsx
resources/js/pages/Dashboard/: Index.tsx
resources/js/pages/User/: ChangePassword.tsx  EditProfile.tsx  Profile.tsx
resources/js/types/: index.ts  inertia.d.ts
scripts/: build_backend.sh  build_frontend.sh  prepare-test-db.sh  test_db.sh
src/: config.rs  lib.rs  main.rs  startup.rs
src/bootstrap/: app_state.rs  database.rs  mod.rs  telemetry.rs
src/jobs/: mod.rs  session_cleanup.rs  token_cleanup.rs
src/moduls/: mod.rs
src/moduls/auth/: mod.rs
src/moduls/auth/api/: handlers.rs  mod.rs  routes.rs
src/moduls/auth/application/: login_user.rs  logout_user.rs  mod.rs  refresh_token.rs  register_user.rs
src/moduls/auth/domain/: mod.rs  session.rs  token_pair.rs  user.rs  value_objects.rs
src/moduls/auth/infra/: mod.rs  postgres_session_repository.rs  postgres_token_repository.rs  postgres_user_repository.rs
src/moduls/auth/web/: handlers.rs  mod.rs  routes.rs
src/moduls/user/: mod.rs
src/moduls/user/api/: handlers.rs  mod.rs  routes.rs
src/moduls/user/application/: change_password.rs  get_profile.rs  mod.rs  update_profile.rs
src/moduls/user/domain/: user_profile.rs
src/shared/: error.rs  mod.rs  result.rs  types.rs
tests/: auth_tests.rs  user_tests.rs
tests/common/: test_app.rs
todo/: folder-structure.md  phase-1-project-setup.md  phase-2-backend-foundation.md  phase-3-auth-module.md  phase-4-frontend-foundation.md  phase-5-auth-frontend.md  phase-6-user-module.md  phase-7-integration.md  progress-tracker.md
(+7 files in other folders)
