[package]
name = "multitenant"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8.7"
axum-inertia = "0.9.0"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Middleware and utilities
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID and time
uuid = { version = "1.11", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Security
bcrypt = "0.15"
jsonwebtoken = "9"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
